--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "new",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://istiak2426.github.io/burgerbuilder.github.io/",
+  "homepage": "https://istiak2426.github.io/burgerbuilder.github.io/",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -24,7 +25,8 @@
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
