--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "new",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://istiak2426.github.io/burgerbuilder.github.io/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,7 +11,6 @@
     "bootstrap": "^5.1.3",
     "firebase-tools": "^10.2.1",
     "formik": "^2.2.9",
-    "gh-pages": "^3.2.3",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "popper": "^1.0.1",
@@ -29,11 +27,10 @@
     "webpack": "4.44.2"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
